# leightsec-template

./: .env.example  Makefile  README.md  conftest.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
project_name/: cli.py
tests/: test_placeholder.py
