[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name"
version = "0.1.0"
description = "TODO: one-line description — LeightonSec portfolio tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "LeightonSec" }]
keywords = ["security", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Exact pins: these tools install into their own venv, so == avoids the
    # gate's unpinned_deps finding without the resolver conflicts that make
    # == an anti-pattern for redistributable libraries. Keep in sync with
    # requirements.txt.
    "typer==0.25.1",
    "rich==15.0.0",
]

[project.scripts]
project-name = "project_name.cli:app"

[project.urls]
Homepage = "https://github.com/LeightonSec/project-name"
Issues = "https://github.com/LeightonSec/project-name/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["project_name*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = ["tests/*", "project_name/cli.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]
